Check `nosniff` on the original response, not revalidation responses.

Bug: 792412
Change-Id: Id805387dea88e18e71d21ca1e799d1076d0b2c5e
Reviewed-on: https://chromium-review.googlesource.com/813835
Commit-Queue: Mike West <mkwst@chromium.org>
Reviewed-by: Daniel Vogelheim <vogelheim@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523068}