third_party/WebKit/LayoutTests/external/wpt/fetch/nosniff/resources/css.py
@@ -1,16 +1,24 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 def main(request, response):
-    outcome = request.GET.first("outcome", "f")
     type = request.GET.first("type", None)
+    is_revalidation = request.headers.get("If-Modified-Since", None)
 
     content = "/* nothing to see here */"
 
     response.add_required_headers = False
-    response.writer.write_status(200)
-    response.writer.write_header("x-content-type-options", "nosniff")
-    response.writer.write_header("content-length", len(content))
-    if(type != None):
-      response.writer.write_header("content-type", type)
-    response.writer.end_headers()
-
-    response.writer.write(content)
+    if is_revalidation is not None:
+      response.writer.write_status(304)
+      response.writer.write_header("x-content-type-options", "nosniff")
+      response.writer.write_header("content-length", 0)
+      if(type != None):
+        response.writer.write_header("content-type", type)
+      response.writer.end_headers()
+      response.writer.write("")
+    else:
+      response.writer.write_status(200)
+      response.writer.write_header("x-content-type-options", "nosniff")
+      response.writer.write_header("content-length", len(content))
+      if(type != None):
+        response.writer.write_header("content-type", type)
+      response.writer.end_headers()
+      response.writer.write(content)
